add api endpoint for retrieving failed matches for a user

--- a/server/cmd/dexadm/index.html
+++ b/server/cmd/dexadm/index.html
@@ -155,7 +155,9 @@
       <h3>👨‍🌾 Account</h3>
       <div class="mb-2">Account ID <input type=text id=accountIDInput class="long"></div>
       <div class="mb-2">
-        <button id=accountInfoBttn>Info</button> <button id=accountOutcomesBttn class="ml-2">Recent Outcomes</button>
+        <button id=accountInfoBttn>Info</button>
+        <button id=accountOutcomesBttn class="ml-2">Recent Outcomes</button>
+        <button id=matchFailsBttn>Match Fails</button>
       </div>
       <div class="mb-2">
         Forgive match:
