add forgive_user admin api

--- a/server/cmd/dexadm/index.html
+++ b/server/cmd/dexadm/index.html
@@ -160,9 +160,13 @@
         <button id=matchFailsBttn>Match Fails</button>
       </div>
       <div class="mb-2">
+        Forgive user:
+        <button id=forgiveUserBttn>Forgive User</button>
+      </div>
+      <div class="mb-2">
         Forgive match:
         <input type=text id=forgiveMatchIDInput class=long>
-        <button id=forgiveMatchBttn>Forgive</button>
+        <button id=forgiveMatchBttn>Forgive Match</button>
       </div>
       <div>
         Send message:
